--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,4 +1,5 @@
 .article-container {
   @include flexCenter;
   @include sectionSpacing;
+  overflow-x: hidden;
 }
